[metadata]
name = pop-up-ide
version = 0.1
author = Markus Lähde
author_email = markuslahde@gmail.com
description = A brief description of your package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markuslahde/pop-up-ide
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = pop_up_ide
install_requires =
    dill
    prompt_toolkit
    pygments
include_package_data = True
python_requires = >=3.7

[options.package_data]
* = *.py
